--- a/filter.css
+++ b/filter.css
@@ -25,3 +25,59 @@
 	font-size: 12px;
 	padding: 0 20px;
 }
+
+/* ================= */
+/* === Post Flip === */
+/* ================= */
+.tolerable-flipped {
+	-webkit-transform: rotateY(180deg);
+}
+
+.post_container {
+	transition: 1s -webkit-transform;
+}
+
+/* Remove the avatar when flipped. */
+.post_container .post_avatar {
+	transition: 0.5s opacity;
+}
+.tolerable-flipped .post_avatar {
+	opacity: 0;
+}
+
+/* Add a delay to showing the avatar when flipping the post back. */
+.tolerable-flipping:not(.tolerable-flipped) .post_avatar {
+	transition-delay: 0.25s
+}
+
+/* Hide the back of the post when not flipped. */
+.tolerable-post_back {
+	opacity: 0;
+	position: absolute;
+	transition: 1s opacity;
+	visibility: hidden;
+}
+
+/* Show it when we're flipped. */
+.tolerable-flipped .tolerable-post_back {
+	opacity: 1;
+}
+
+.tolerable-flipped .tolerable-post_back::after {
+	clear: both;
+}
+
+.tolerable-flipped .tolerable-post_back,
+.tolerable-flipping .tolerable-post_back {
+	background-color: white;
+	border-radius: 6px;
+	box-sizing: border-box;
+	min-height: 100%;
+	left: 0;
+	padding: 20px;
+	top: 0;
+	-webkit-transform: rotateY(180deg);
+	width: 100%;
+	visibility: visible;
+	z-index: 2;
+}
